# gol

./: Cargo.toml  README.md
src/: cell.rs  input.rs  main.rs  simulation.rs  ui.rs
