[package]
name = "game_of_life"
authors = ["WildCommunist <alex@ceres.ventures>"]
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] } #NOTE: Remember to revert this before releasing your game!
#bevy = "0.9.1" #NOTE: Remember to revert this before releasing your game!
bevy_editor_pls = "0.2.0"

